# discord_bot_rs

./: .gitignore  Cargo.toml  README.md
src/: config.rs  logger.rs  main.rs
src/commands/: bug_report.rs  chat.rs  complete.rs  confess.rs  dall_e.rs  edit.rs  member_report.rs  mod.rs  purge.rs  test.rs
src/config/: config.rs  mod.rs
src/openai/: args.rs  client.rs  mod.rs  tests.rs
