[package]
name = "discord_bot_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
serde_json = "1"
async-trait = "0.1.65"
rand = "0.8.5"
openai_gpt_rs = "0.1.1"
